--- a/index.html
+++ b/index.html
@@ -4,6 +4,180 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Organizar Engenharia</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="app.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="page-header bg-gray-800">
+      <div class="container text-center position-relative">
+        <img src="images/logo.png" alt="Organizar" height="150" />
+      </div>
+    </header>
+    <section class="bg-gray-50 py-5rem">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col">
+            <img
+              src="images/incendio.jpg"
+              alt="Incêndio"
+              class="img-thumbnail rounded-5 shadow"
+            />
+          </div>
+          <div class="col">
+            <div class="px-5">
+              <h1 class="fw-bolder text-gray-800 display-5">
+                Projetos de Incêndio
+              </h1>
+              <p>
+                Voluptate dolore nulla dolor in qui pariatur magna est duis
+                voluptate cillum ipsum Lorem pariatur.
+              </p>
+              <ul class="list-services text-sm">
+                <li>PGR - Programa de Gerenciamento de Riscos;</li>
+                <li>
+                  LTCAT - Laudo Técnico das Condições Ambientais de Trabalho;
+                </li>
+                <li>Laudos técnicos de insalubridade e periculosidade;</li>
+                <li>PRE - Plano de Resposta à Emergências;</li>
+                <li>AET - Análise Ergonômica do Trabalho;</li>
+                <li>CIPA - Comissão Interna de Prevenção de Acidentes;</li>
+                <li>Investigação e análise de acidentes de trabalho;</li>
+                <li>Inpeções de Segurança do Trabalho;</li>
+                <li>
+                  Envio de informações de SST ao e-Social (S-2240 e S-2210);
+                </li>
+                <li>Treinamentos nas normas regulamentadoras;</li>
+                <li>Acompanhamento em perícias;</li>
+                <li>Consultoria especializada.</li>
+              </ul>
+              <div class="d-flex align-items-center justify-content-between">
+                <button class="btn btn-primary">Solicitar Proposta</button>
+                <div class="fs-5">
+                  <span class="me-1">(37) 99999-9999</span>
+                  <i class="bi bi-telephone"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="py-5rem">
+      <div class="container">
+        <div
+          class="card card-body border-0 bg-light box-shadow-lg p-0 overflow-hidden rounded-4"
+        >
+          <h1 class="fw-bolder text-gray-800 display-5 px-5 pt-5">
+            Segurança do Trabalho
+          </h1>
+          <div class="row g-0">
+            <div class="col d-flex flex-column px-5 pb-5">
+              <p>
+                Sunt duis consectetur deserunt magna consequat elit sint
+                occaecat qui proident minim.
+              </p>
+              <ul class="list-services text-sm">
+                <li>PGR - Programa de Gerenciamento de Riscos;</li>
+                <li>
+                  LTCAT - Laudo Técnico das Condições Ambientais de Trabalho;
+                </li>
+                <li>Laudos técnicos de insalubridade e periculosidade;</li>
+                <li>PRE - Plano de Resposta à Emergências;</li>
+                <li>AET - Análise Ergonômica do Trabalho;</li>
+                <li>CIPA - Comissão Interna de Prevenção de Acidentes;</li>
+                <li>Investigação e análise de acidentes de trabalho;</li>
+                <li>Inpeções de Segurança do Trabalho;</li>
+                <li>
+                  Envio de informações de SST ao e-Social (S-2240 e S-2210);
+                </li>
+                <li>Treinamentos nas normas regulamentadoras;</li>
+                <li>Acompanhamento em perícias;</li>
+                <li>Consultoria especializada.</li>
+              </ul>
+              <div
+                class="d-flex align-items-center justify-content-between mt-auto"
+              >
+                <button class="btn btn-primary">Solicitar Proposta</button>
+                <div class="fs-5">
+                  <span class="me-1">(37) 99999-9999</span>
+                  <i class="bi bi-telephone"></i>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <img
+                src="images/seguranca.jpg"
+                class="img-fluid"
+                style="border-top-left-radius: 1rem"
+                alt="Segurança do trabalho"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="bg-gray-100 py-5rem">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col">
+            <h1 class="fw-bolder text-gray-800 display-5">Meio Ambiente</h1>
+            <p>
+              Do elit duis id excepteur mollit fugiat aliqua cillum ex consequat
+              minim ad elit.
+            </p>
+            <ul class="list-services text-sm" style="margin-bottom: 2rem">
+              <li>PGR - Programa de Gerenciamento de Riscos;</li>
+              <li>Laudos técnicos de insalubridade e periculosidade;</li>
+              <li>PRE - Plano de Resposta à Emergências;</li>
+              <li>AET - Análise Ergonômica do Trabalho;</li>
+              <li>CIPA - Comissão Interna de Prevenção de Acidentes;</li>
+              <li>Investigação e análise de acidentes de trabalho;</li>
+              <li>Inpeções de Segurança do Trabalho;</li>
+              <li>Treinamentos nas normas regulamentadoras;</li>
+              <li>Acompanhamento em perícias;</li>
+              <li>Consultoria especializada.</li>
+            </ul>
+            <div class="d-flex align-items-center">
+              <button class="btn btn-primary me-4">Solicitar Proposta</button>
+              <div class="fs-5">
+                <span class="me-1">(37) 99999-9999</span>
+                <i class="bi bi-telephone"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div
+              class="position-relative"
+              style="padding-left: 10rem; padding-bottom: 2.5rem"
+            >
+              <img
+                src="images/meio-ambiente-1.jpg"
+                class="img-thumbnail shadow"
+                alt="Meio ambiente"
+              />
+              <img
+                src="images/meio-ambiente-2.jpg"
+                class="img-thumbnail shadow img-floated"
+                alt="Meio ambiente"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
