Rodapé com carousel de logos

--- a/index.html
+++ b/index.html
@@ -15,62 +15,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="plugins/owl.carousel.min.css" />
   </head>
   <body>
-    <header class="page-header bg-gray-800">
-      <div class="container text-center position-relative">
-        <img src="images/logo.png" alt="Organizar" height="150" />
+    <header class="py-3 bg-gray-800">
+      <div class="container position-relative">
+        <img src="images/logo.png" alt="Organizar" height="85" />
       </div>
     </header>
-    <section class="bg-gray-50 py-5rem">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col">
-            <img
-              src="images/incendio.jpg"
-              alt="Incêndio"
-              class="img-thumbnail rounded-5 shadow"
-            />
-          </div>
-          <div class="col">
-            <div class="px-5">
-              <h1 class="fw-bolder text-gray-800 display-5">
-                Projetos de Incêndio
-              </h1>
-              <p>
-                Voluptate dolore nulla dolor in qui pariatur magna est duis
-                voluptate cillum ipsum Lorem pariatur.
-              </p>
-              <ul class="list-services text-sm">
-                <li>PGR - Programa de Gerenciamento de Riscos;</li>
-                <li>
-                  LTCAT - Laudo Técnico das Condições Ambientais de Trabalho;
-                </li>
-                <li>Laudos técnicos de insalubridade e periculosidade;</li>
-                <li>PRE - Plano de Resposta à Emergências;</li>
-                <li>AET - Análise Ergonômica do Trabalho;</li>
-                <li>CIPA - Comissão Interna de Prevenção de Acidentes;</li>
-                <li>Investigação e análise de acidentes de trabalho;</li>
-                <li>Inpeções de Segurança do Trabalho;</li>
-                <li>
-                  Envio de informações de SST ao e-Social (S-2240 e S-2210);
-                </li>
-                <li>Treinamentos nas normas regulamentadoras;</li>
-                <li>Acompanhamento em perícias;</li>
-                <li>Consultoria especializada.</li>
-              </ul>
-              <div class="d-flex align-items-center justify-content-between">
-                <button class="btn btn-primary">Solicitar Proposta</button>
-                <div class="fs-5">
-                  <span class="me-1">(37) 99999-9999</span>
-                  <i class="bi bi-telephone"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <section class="py-5rem">
       <div class="container">
         <div
@@ -125,6 +78,55 @@
         </div>
       </div>
     </section>
+    <section class="bg-gray-50 py-5rem">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col">
+            <img
+              src="images/incendio.jpg"
+              alt="Incêndio"
+              class="img-thumbnail rounded-5 shadow"
+            />
+          </div>
+          <div class="col">
+            <div class="px-5">
+              <h1 class="fw-bolder text-gray-800 display-5">
+                Projetos de Incêndio
+              </h1>
+              <p>
+                Voluptate dolore nulla dolor in qui pariatur magna est duis
+                voluptate cillum ipsum Lorem pariatur.
+              </p>
+              <ul class="list-services text-sm">
+                <li>PGR - Programa de Gerenciamento de Riscos;</li>
+                <li>
+                  LTCAT - Laudo Técnico das Condições Ambientais de Trabalho;
+                </li>
+                <li>Laudos técnicos de insalubridade e periculosidade;</li>
+                <li>PRE - Plano de Resposta à Emergências;</li>
+                <li>AET - Análise Ergonômica do Trabalho;</li>
+                <li>CIPA - Comissão Interna de Prevenção de Acidentes;</li>
+                <li>Investigação e análise de acidentes de trabalho;</li>
+                <li>Inpeções de Segurança do Trabalho;</li>
+                <li>
+                  Envio de informações de SST ao e-Social (S-2240 e S-2210);
+                </li>
+                <li>Treinamentos nas normas regulamentadoras;</li>
+                <li>Acompanhamento em perícias;</li>
+                <li>Consultoria especializada.</li>
+              </ul>
+              <div class="d-flex align-items-center justify-content-between">
+                <button class="btn btn-primary">Solicitar Proposta</button>
+                <div class="fs-5">
+                  <span class="me-1">(37) 99999-9999</span>
+                  <i class="bi bi-telephone"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="bg-gray-100 py-5rem">
       <div class="container">
         <div class="row align-items-center">
@@ -174,10 +176,62 @@
         </div>
       </div>
     </section>
+
+    <section class="bg-gray-400 py-5">
+      <div class="container">
+        <h1 class="mb-0 fw-bold text-4xl">Organizar</h1>
+        <p>Anim elit consequat dolore qui irure laboris non duis ut.</p>
+        <hr />
+        <footer class="owl-carousel bg-gray-400">
+          <img src="images/logos/logo-1.png" />
+          <img src="images/logos/logo-2.jpg" />
+          <img src="images/logos/logo-3.jpg" />
+          <img src="images/logos/logo-4.jpg" />
+          <img src="images/logos/logo-5.jpg" />
+          <img src="images/logos/logo-6.jpg" />
+          <img src="images/logos/logo-7.jpg" />
+          <img src="images/logos/logo-8.jpg" />
+          <img src="images/logos/logo-9.jpg" />
+          <img src="images/logos/logo-10.jpg" />
+          <img src="images/logos/logo-11.jpg" />
+          <img src="images/logos/logo-12.jpg" />
+          <img src="images/logos/logo-13.jpg" />
+          <img src="images/logos/logo-14.jpg" />
+          <img src="images/logos/logo-15.jpg" />
+          <img src="images/logos/logo-16.jpg" />
+        </footer>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <script src="plugins/jquery.min.js"></script>
+    <script src="plugins/owl.carousel.min.js"></script>
+    <script>
+      $("footer").owlCarousel({
+        loop: true,
+        autoplay: true,
+        autoplayTimeout: 3000,
+        responsive: {
+          0: {
+            items: 3,
+          },
+          500: {
+            items: 4,
+          },
+          600: {
+            items: 6,
+          },
+          1000: {
+            items: 8,
+          },
+          1200: {
+            items: 10,
+          },
+        },
+      });
+    </script>
   </body>
 </html>
