--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </a>
           </div>
           <div class="col-sm-auto order-xl-last">
-            <button type="button" class="btn btn-primary">
-              Seja um parceiro
+            <button type="button" class="button small from-center">
+              <span>Seja um parceiro</span>
             </button>
           </div>
           <div class="col-xl">
@@ -107,10 +107,8 @@
                 <li>Acompanhamento em perícias;</li>
                 <li>Consultoria especializada.</li>
               </ul>
-              <div
-                class="d-flex align-items-center justify-content-between mt-auto"
-              >
-                <button class="btn btn-primary">Solicitar Proposta</button>
+              <div class="d-flex align-items-center mt-auto">
+                <button class="btn btn-primary me-4">Solicitar Proposta</button>
                 <div class="fs-5">
                   <span class="me-1">(37) 99999-9999</span>
                   <i class="bi bi-telephone"></i>
@@ -165,8 +163,8 @@
                 <li>Acompanhamento em perícias;</li>
                 <li>Consultoria especializada.</li>
               </ul>
-              <div class="d-flex align-items-center justify-content-between">
-                <button class="btn btn-primary">Solicitar Proposta</button>
+              <div class="d-flex align-items-center">
+                <button class="btn btn-primary me-4">Solicitar Proposta</button>
                 <div class="fs-5">
                   <span class="me-1">(37) 99999-9999</span>
                   <i class="bi bi-telephone"></i>
@@ -186,7 +184,7 @@
               Do elit duis id excepteur mollit fugiat aliqua cillum ex consequat
               minim ad elit.
             </p>
-            <ul class="list-services text-sm" style="margin-bottom: 2rem">
+            <ul class="list-services text-sm">
               <li>PGR - Programa de Gerenciamento de Riscos;</li>
               <li>Laudos técnicos de insalubridade e periculosidade;</li>
               <li>PRE - Plano de Resposta à Emergências;</li>
@@ -237,8 +235,8 @@
             </address>
           </div>
           <div class="d-inline-flex align-items-center">
-            <i class="bi bi-instagram fs-3 me-3"></i>
-            <i class="bi bi-whatsapp fs-3 me-2"></i>
+            <i class="bi bi-whatsapp fs-3 me-3"></i>
+            <i class="bi bi-instagram fs-3"></i>
           </div>
         </div>
         <hr style="margin: 2rem 0" />
