Substituindo logos no rodapé das páginas

--- a/engenharia.html
+++ b/engenharia.html
@@ -59,11 +59,13 @@
       <div class="container">
         <div class="text-center" style="margin-bottom: 5rem">
           <h1 class="display-4 fw-bold mb-0 text-gray-800">Engenharia</h1>
-          <p class="mb-4">Occaecat sit proident occaecat aute ipsum.</p>
+          <p class="mb-4">
+            Protegendo o Presente, Construindo um Futuro Seguro!
+          </p>
           <div class="row">
             <div class="col">
               <h2 class="mb-0 text-success">10+</h2>
-              <small>Anos de experiencia</small>
+              <small>Anos de experiência</small>
             </div>
             <div class="col">
               <h2 class="mb-0 text-success">2000+</h2>
@@ -85,10 +87,7 @@
           </h1>
           <div class="row g-0">
             <div class="col d-flex flex-column px-5 pb-5">
-              <p>
-                Sunt duis consectetur deserunt magna consequat elit sint
-                occaecat qui proident minim.
-              </p>
+              <p>Conheça algumas de nossas especialidades:</p>
               <ul class="list-services text-sm">
                 <li>PGR - Programa de Gerenciamento de Riscos;</li>
                 <li>
@@ -98,8 +97,8 @@
                 <li>PRE - Plano de Resposta à Emergências;</li>
                 <li>AET - Análise Ergonômica do Trabalho;</li>
                 <li>CIPA - Comissão Interna de Prevenção de Acidentes;</li>
-                <li>Investigação e análise de acidentes de trabalho;</li>
-                <li>Inpeções de Segurança do Trabalho;</li>
+                <li>Investigação e análise de acidentes do trabalho;</li>
+                <li>Inspeções de Segurança do Trabalho;</li>
                 <li>
                   Envio de informações de SST ao e-Social (S-2240 e S-2210);
                 </li>
@@ -107,12 +106,22 @@
                 <li>Acompanhamento em perícias;</li>
                 <li>Consultoria especializada.</li>
               </ul>
-              <div class="d-flex align-items-center mt-auto">
-                <button class="btn btn-primary me-4">Solicitar Proposta</button>
-                <div class="fs-5">
-                  <span class="me-1">(37) 99999-9999</span>
+              <div class="d-flex align-items-center mt-auto mb-2">
+                <a
+                  href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
+                  class="btn btn-primary me-4"
+                  target="_blank"
+                  >Solicitar Proposta</a
+                >
+                <div class="fs-6">
+                  <span class="me-1">(37) 99988-1070</span>
                   <i class="bi bi-telephone"></i>
                 </div>
+                <a
+                  href="mailto:gerencia.organizar@gmail.com"
+                  class="btn btn-outline-primary ms-auto"
+                  >Dúvidas Técnicas</a
+                >
               </div>
             </div>
             <div class="col">
@@ -141,34 +150,30 @@
               <h1 class="fw-bolder text-gray-800 display-5">
                 Projetos de Incêndio
               </h1>
-              <p>
-                Voluptate dolore nulla dolor in qui pariatur magna est duis
-                voluptate cillum ipsum Lorem pariatur.
-              </p>
+              <p>Conheça algumas de nossas especialidades:</p>
               <ul class="list-services text-sm">
-                <li>PGR - Programa de Gerenciamento de Riscos;</li>
-                <li>
-                  LTCAT - Laudo Técnico das Condições Ambientais de Trabalho;
-                </li>
-                <li>Laudos técnicos de insalubridade e periculosidade;</li>
-                <li>PRE - Plano de Resposta à Emergências;</li>
-                <li>AET - Análise Ergonômica do Trabalho;</li>
-                <li>CIPA - Comissão Interna de Prevenção de Acidentes;</li>
-                <li>Investigação e análise de acidentes de trabalho;</li>
-                <li>Inpeções de Segurança do Trabalho;</li>
-                <li>
-                  Envio de informações de SST ao e-Social (S-2240 e S-2210);
-                </li>
-                <li>Treinamentos nas normas regulamentadoras;</li>
-                <li>Acompanhamento em perícias;</li>
-                <li>Consultoria especializada.</li>
+                <li>PT (Projeto técnico);</li>
+                <li>PTS (Projeto técnico simplificado);</li>
+                <li>Renovação de AVCB;</li>
+                <li>Atualização de dados cadastrais;</li>
+                <li>Treinamento de Brigada de incêndio;</li>
+                <li>Gestão de incêndio.</li>
               </ul>
-              <div class="d-flex align-items-center">
-                <button class="btn btn-primary me-4">Solicitar Proposta</button>
+              <div class="d-flex align-items-center justify-content-between">
+                <a
+                  href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
+                  class="btn btn-primary"
+                  >Solicitar Proposta</a
+                >
                 <div class="fs-5">
-                  <span class="me-1">(37) 99999-9999</span>
+                  <span class="me-1">(37) 99988-1070</span>
                   <i class="bi bi-telephone"></i>
                 </div>
+                <a
+                  href="mailto:incendio.organizar@gmail.com"
+                  class="btn btn-outline-primary"
+                  >Dúvidas Técnicas</a
+                >
               </div>
             </div>
           </div>
@@ -180,28 +185,51 @@
         <div class="row align-items-center">
           <div class="col">
             <h1 class="fw-bolder text-gray-800 display-5">Meio Ambiente</h1>
-            <p>
-              Do elit duis id excepteur mollit fugiat aliqua cillum ex consequat
-              minim ad elit.
-            </p>
+            <p>Conheça algumas de nossas especialidades:</p>
             <ul class="list-services text-sm">
-              <li>PGR - Programa de Gerenciamento de Riscos;</li>
-              <li>Laudos técnicos de insalubridade e periculosidade;</li>
-              <li>PRE - Plano de Resposta à Emergências;</li>
-              <li>AET - Análise Ergonômica do Trabalho;</li>
-              <li>CIPA - Comissão Interna de Prevenção de Acidentes;</li>
-              <li>Investigação e análise de acidentes de trabalho;</li>
-              <li>Inpeções de Segurança do Trabalho;</li>
-              <li>Treinamentos nas normas regulamentadoras;</li>
-              <li>Acompanhamento em perícias;</li>
-              <li>Consultoria especializada.</li>
+              <li>
+                Licenciamento Ambiental (LAS/CADASTRO, LAS/ RAS, LAC 1 e 2);
+              </li>
+              <li>
+                Acompanhamento e monitoramento de condicionantes ambientais;
+              </li>
+              <li>
+                Elaboração de RCA – Relatório de Controle Ambiental e PCA –
+                Plano de Controle Ambiental;
+              </li>
+              <li>Outorga de uso da água;</li>
+              <li>Cadastro de uso Insignificante de Água;</li>
+              <li>Renovação de Licença Ambiental;</li>
+              <li>
+                Elaboração de RADA – Relatório de Avaliação e Desempenho
+                Ambiental;
+              </li>
+              <li>Cadastro Técnico Federal do IBAMA;</li>
+              <li>Certificado de Registro junto ao IEF;</li>
+              <li>Projetos de Compensação Ambiental;</li>
+              <li>Implementação e Gestão de Projetos de Educação Ambiental;</li>
+              <li>Plano de Gerenciamento de Resíduos Sólidos. – PGRS;</li>
+              <li>Implantação de Sistema de Gestão Ambiental – SGA;</li>
+              <li>Projeto Técnico de Reconstituição de Flora – PTRF;</li>
+              <li>Projeto de Recuperação de Área Degradada – PRAD;</li>
+              <li>Elaboração do PSS e CAS junto ao IEF;</li>
+              <li>Cursos, palestras e treinamentos.</li>
             </ul>
             <div class="d-flex align-items-center">
-              <button class="btn btn-primary me-4">Solicitar Proposta</button>
+              <a
+                href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
+                class="btn btn-primary me-4"
+                >Solicitar Proposta</a
+              >
               <div class="fs-5">
-                <span class="me-1">(37) 99999-9999</span>
+                <span class="me-1">(37) 99988-1070</span>
                 <i class="bi bi-telephone"></i>
               </div>
+              <a
+                href="mailto:ambiental.organizar@gmail.com"
+                class="btn btn-outline-primary ms-auto"
+                >Dúvidas Técnicas</a
+              >
             </div>
           </div>
           <div class="col">
@@ -241,22 +269,25 @@
         </div>
         <hr style="margin: 2rem 0" />
         <footer class="owl-carousel bg-gray-400">
-          <img src="images/logos/logo-1.png" />
-          <img src="images/logos/logo-2.jpg" />
-          <img src="images/logos/logo-3.jpg" />
-          <img src="images/logos/logo-4.jpg" />
-          <img src="images/logos/logo-5.jpg" />
-          <img src="images/logos/logo-6.jpg" />
+          <img src="images/logos/logo-1.webp" />
+          <img src="images/logos/logo-2.png" />
+          <img src="images/logos/logo-3.png" />
+          <img src="images/logos/logo-4.png" />
+          <img src="images/logos/logo-5.webp" />
+          <img src="images/logos/logo-6.png" />
           <img src="images/logos/logo-7.jpg" />
-          <img src="images/logos/logo-8.jpg" />
+          <img src="images/logos/logo-8.png" />
           <img src="images/logos/logo-9.jpg" />
-          <img src="images/logos/logo-10.jpg" />
-          <img src="images/logos/logo-11.jpg" />
+          <img src="images/logos/logo-10.png" />
+          <img src="images/logos/logo-11.png" />
           <img src="images/logos/logo-12.jpg" />
-          <img src="images/logos/logo-13.jpg" />
+          <img src="images/logos/logo-13.jpeg" />
           <img src="images/logos/logo-14.jpg" />
-          <img src="images/logos/logo-15.jpg" />
-          <img src="images/logos/logo-16.jpg" />
+          <img src="images/logos/logo-15.png" />
+          <img src="images/logos/logo-16.png" />
+          <img src="images/logos/logo-17.jpg" />
+          <img src="images/logos/logo-18.png" />
+          <img src="images/logos/logo-19.jpg" />
         </footer>
       </div>
     </section>
@@ -271,6 +302,7 @@
       $("footer").owlCarousel({
         loop: true,
         autoplay: true,
+        margin: 16,
         autoplayTimeout: 3000,
         responsive: {
           0: {
