Ajustando links de redirecionamento

--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
             data-count="6"
             style="--overlay-color: #87c43f"
           >
-            <div class="image-wrapper">
-              <img src="images/home/engenharia/img-1.jpg" />
-            </div>
+            <a href="engenharia.html">
+              <div class="image-wrapper">
+                <img src="images/home/engenharia/img-1.jpg" />
+              </div>
+            </a>
             <h2 class="title">Engenharia</h2>
           </div>
+
           <div
             class="promo"
             data-title="Execução de sistemas de combate à incêndio"
@@ -79,9 +82,11 @@
             data-count
             style="--overlay-color: #f6911e"
           >
-            <div class="image-wrapper">
-              <img src="images/home/execucao/img-1.jpg" />
-            </div>
+            <a href="execucao.html">
+              <div class="image-wrapper">
+                <img src="images/home/execucao/img-1.jpg" />
+              </div>
+            </a>
             <h2 class="title">Execução</h2>
           </div>
           <div
