Ajustando responsividade da seção de incendio da página de engenharia

--- a/engenharia.html
+++ b/engenharia.html
@@ -26,7 +26,12 @@
               href="/"
               class="d-inline-block text-decoration-none mb-2 mb-xl-0"
             >
-              <img src="images/logo.png" alt="Organizar" height="85" />
+              <img
+                src="images/logo.png"
+                alt="Organizar"
+                height="85"
+                class="page-logo"
+              />
             </a>
           </div>
           <div class="col-sm-auto order-xl-last">
@@ -137,16 +142,11 @@
     </section>
     <section class="bg-gray-50 py-5rem" id="incendio">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col">
-            <img
-              src="images/incendio.jpg"
-              alt="Incêndio"
-              class="img-thumbnail rounded-5 shadow"
-            />
-          </div>
-          <div class="col">
-            <div class="px-5">
+        <div
+          class="row gy-4 justify-content-center align-items-center text-sm-center text-xl-start"
+        >
+          <div class="col-sm-auto col-xl order-xl-last">
+            <div class="px-3 px-sm-5">
               <h1 class="fw-bolder text-gray-800 display-5">
                 Projetos de Incêndio
               </h1>
@@ -159,23 +159,38 @@
                 <li>Treinamento de Brigada de incêndio;</li>
                 <li>Gestão de incêndio.</li>
               </ul>
-              <div class="d-flex align-items-center justify-content-between">
-                <a
-                  href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
-                  class="btn btn-primary"
-                  >Solicitar Proposta</a
-                >
-                <div class="fs-5">
-                  <span class="me-1">(37) 99988-1070</span>
-                  <i class="bi bi-telephone"></i>
+              <div
+                class="row g-3 align-items-center justify-content-md-center justify-content-xl-between"
+              >
+                <div class="col-md-auto text-start">
+                  <div class="fs-5 me-md-5 me-xl-0">
+                    <span class="me-1">(37) 99988-1070</span>
+                    <i class="bi bi-telephone"></i>
+                  </div>
                 </div>
-                <a
-                  href="mailto:incendio.organizar@gmail.com"
-                  class="btn btn-outline-primary"
-                  >Dúvidas Técnicas</a
-                >
+                <div class="col-auto order-md-first">
+                  <a
+                    href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
+                    class="btn btn-primary me-md-5 me-xl-0"
+                    >Solicitar Proposta</a
+                  >
+                </div>
+                <div class="col-auto">
+                  <a
+                    href="mailto:incendio.organizar@gmail.com"
+                    class="btn btn-outline-primary"
+                    >Dúvidas Técnicas</a
+                  >
+                </div>
               </div>
             </div>
+          </div>
+          <div class="col-xl">
+            <img
+              src="images/incendio.jpg"
+              alt="Incêndio"
+              class="img-thumbnail rounded-5 shadow"
+            />
           </div>
         </div>
       </div>
