Ajustando responsividade de sessão de Meio ambiente

--- a/engenharia.html
+++ b/engenharia.html
@@ -35,9 +35,12 @@
             </a>
           </div>
           <div class="col-sm-auto order-xl-last">
-            <button type="button" class="button small from-center">
+            <a
+              href="https://parceiro.grupoorganizar.com.br/"
+              class="button small from-center"
+            >
               <span>Seja um parceiro</span>
-            </button>
+            </a>
           </div>
           <div class="col-xl">
             <ul class="nav nav-centered mb-2 mb-xl-0">
@@ -197,8 +200,10 @@
     </section>
     <section class="bg-gray-100 py-5rem" id="ambiente">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col">
+        <div
+          class="row gy-5 align-items-center justify-content-center text-sm-center text-xl-start"
+        >
+          <div class="col-sm-auto col-xl">
             <h1 class="fw-bolder text-gray-800 display-5">Meio Ambiente</h1>
             <p>Conheça algumas de nossas especialidades:</p>
             <ul class="list-services text-sm">
@@ -230,27 +235,35 @@
               <li>Elaboração do PSS e CAS junto ao IEF;</li>
               <li>Cursos, palestras e treinamentos.</li>
             </ul>
-            <div class="d-flex align-items-center">
-              <a
-                href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
-                class="btn btn-primary me-4"
-                >Solicitar Proposta</a
-              >
-              <div class="fs-5">
-                <span class="me-1">(37) 99988-1070</span>
-                <i class="bi bi-telephone"></i>
+            <div
+              class="row g-3 align-items-center justify-content-md-center justify-content-xl-between"
+            >
+              <div class="col-md-auto text-start">
+                <div class="fs-5 me-md-5 me-xl-0">
+                  <span class="me-1">(37) 99988-1070</span>
+                  <i class="bi bi-telephone"></i>
+                </div>
               </div>
-              <a
-                href="mailto:ambiental.organizar@gmail.com"
-                class="btn btn-outline-primary ms-auto"
-                >Dúvidas Técnicas</a
-              >
+              <div class="col-auto order-md-first">
+                <a
+                  href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
+                  class="btn btn-primary me-md-5 me-xl-0"
+                  >Solicitar Proposta</a
+                >
+              </div>
+              <div class="col-auto">
+                <a
+                  href="mailto:ambiental.organizar@gmail.com"
+                  class="btn btn-outline-primary ms-auto"
+                  >Dúvidas Técnicas</a
+                >
+              </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-md-10 col-lg-8 col-xl">
             <div
               class="position-relative"
-              style="padding-left: 10rem; padding-bottom: 2.5rem"
+              style="padding-left: 25%; padding-bottom: 2.5rem"
             >
               <img
                 src="images/meio-ambiente-1.jpg"
